Add questions to carousel

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,90 +1,52 @@
-    <form class="form-inline box" style="width:auto;height:400px;" >
-        <div align="center" id="cell">
-            <TEXTAREA NAME="COMMENT" ROWS=3 COLS=50></TEXTAREA>
-            <button type ="Submit" class="btn btn-primary">Go fucking Ask!!!</button>
-        </div>      
-   </form>
-   <!-- Carousel================================================== -->
-   <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-       <!-- Indicators -->
-       <ol class="carousel-indicators">
-           <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-           <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-           <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-       </ol>
 
-       <div class="carousel-inner">
-           <!-- Three columns of text in the carousel -->
-           <div class="item active container marketing" alt="First slide">
-               <div class="row">
-                   <div class="col-lg-4">
-               
-                       <h2>Heading</h2>
-                      <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                       </div><!-- /.col-lg-4 -->
-                       <div class="col-lg-4">
-              
-                       <h2>Heading</h2>
-                       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-                   <div class="col-lg-4">
-             
-                       <h2>Heading</h2>
-                       <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta  felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-               </div><!-- /.row -->
-           </div>
-           <!-- Three columns of text in the carousel -->
-           <div class="item container marketing" alt="Second slide">
-               <div class="row">
-                   <div class="col-lg-4">
-            
-                       <h2>Heading</h2>
-                       <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-                   <div class="col-lg-4">
-              
-                       <h2>Heading</h2>
-                       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-                   <div class="col-lg-4">
-              
-                       <h2>Heading</h2>
-                       <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus  commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-               </div><!-- /.row -->
-           </div>
-           <!-- Three columns of text in the carousel -->
-           <div class="item container marketing" alt="Third slide">
-               <div class="row">
-                   <div class="col-lg-4">
-              
-                       <h2>Heading</h2>
-                       <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-                   <div class="col-lg-4">
-             
-                       <h2>Heading</h2>
-                       <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-                   <div class="col-lg-4">
-              
-                       <h2>Heading</h2>
-                       <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus  commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                       <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-                   </div><!-- /.col-lg-4 -->
-               </div><!-- /.row -->
-           </div>
-       </div>
-       <!-- Right & Left button-->
-       <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-       <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div><!-- /.carousel -->
+<%= form_for Question.new, :html => {:class => "form-inline box", :style => "width:auto;height:400px;"} do |f| %>
+  <div align="center" id="cell">
+    <%= f.text_area :content, :rows => 3, :cols => 50 %>
+    <%= f.button "Go fucking Ask!!!", :class => "btn btn-primary"%>
+  </div>
+  <div align="center" id="cell">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </div>
+<% end %>
+<!-- Carousel================================================== -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <% total_page = (@questions.count/3.0).ceil %>
+    <% total_page.times do |i| %>
+      <% if i == 0 %>
+        <li data-target="#carousel-example-generic" data-slide-to=<%= i+1 %> class="active"></li>
+      <% else %>
+        <li data-target="#carousel-example-generic" data-slide-to=<%= i+1 %>></li>
+      <% end %>
+    <% end %>
+  </ol>
+
+  <div class="carousel-inner">
+    <% total_page.times do |i| %>
+      <% if i == 0 %>
+        <div class="item active container marketing">
+      <% else %>
+        <div class="item container marketing">
+      <% end %>
+
+        <div class="row">
+          <% 3.times do |j| %>
+            <div class="col-lg-4">
+              <% question_index = i * 3 + j %>
+              <% if question_index < @questions.count %>
+                <p><%= @questions[question_index].content %></p>
+                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p> 
+              <% end %>
+            </div><!-- /.col-lg-4 -->
+          <% end %>
+        </div><!-- /.row -->
+      </div>
+    <% end %>
+  </div>
+  <!-- Right & Left button-->
+  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+</div><!-- /.carousel -->
+
