--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,20 @@
 </head>
 <body>
 
-<%# if user_signed_in? %>
-  <%#= link_to('Edit account(' + current_user.email + ')', edit_user_registration_path) %>
-  <%#= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
-<%# end %>
-
-
-  <div id="top" style="width:auto;height:auto;background-color:000000;">
-    <div id="toplogo">
-      <a href="http://www.facebook.com">
-        <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/1471905_10201944735612310_613489915_n.jpg" alt="W3Schools.com" width="280" height="32" style="border:0;">
-      </a>
-    </div>
+<div id="top" style="width:auto;height:auto;background-color:000000;">
+  <div id="toplogo">
+    <a href="http://www.facebook.com">
+      <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/1471905_10201944735612310_613489915_n.jpg" alt="W3Schools.com" width="280" height="32" style="border:0;">
+    </a>
   </div>
+</div>
 
 <% if user_signed_in? %>
   <div style="width:auto;height:40px;background-color:#ADADFF;padding:10px 0 0 1280px" >
     <div class="dropdown" style="position:absolute; right:20px">
       <li class="nav nav-pills" >
         <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:#000000;bottom:20px">
-          Fucking User<img src="assets/123.jpg"/>
+          <%= current_user.email %><img src="assets/123.jpg"/>
         </a>
         <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
           <li role="presentation"><a role="menuitem" tabindex="-1" href="#">AssHole</a></li>
@@ -42,7 +36,6 @@
     </div>
   </div>
 <% end %>
-
 
 <!-- p class="notice"><%= notice %></p -->
 <!-- p class="alert"><%= alert %></p -->
