--- a/app/views/questions/create.js.erb
+++ b/app/views/questions/create.js.erb
@@ -1,2 +1,2 @@
-alert("Question was successfully created.")
+$("#ask_button").notify("Question Sent!",  "success"  );
 $("#new_question")[0].reset();
