--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TestMongoid</title>
+  <title>Fast Q</title>
   <meta charset="UTF-8"><meta>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag :defaults, "http://localhost:9292/faye.js" %>
   <%= csrf_meta_tags %>
+  <link rel="shortcut icon" href=<%= asset_path "logo-n4-justQ_icon_blue.png" %>>
 </head>
-<body>
+<body class="" style="background-color: #fff">
 
-<div id="top" style="width:auto;height:auto;background-color:000000;">
-  <div id="toplogo">
-    <a href=<%= root_url %>>
-      <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-prn2/1471905_10201944735612310_613489915_n.jpg" alt="W3Schools.com" width="280" height="32" style="border:0;">
-    </a>
-  </div>
-</div>
+<div class="navbar navbar-default navbar-fixed-top navbar-inverse">
+  <div class="navbar-inner">
+    <div class="container" style="width:100%">
 
-<div style="width:auto;height:40px;background-color:#ADADFF;padding:10px 0 0 1280px" >
-  <% if user_signed_in? %>
-    <%= hidden_field_tag :user_id, current_user._id, :id => "user_id" %>
-    <div class="dropdown" style="position:absolute; right:140px">
-      <li class="nav nav-pills" >
-        <a id="question_notifications_counter" class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:#000000;bottom:20px">
-          Questions(<%= current_user.question_notifications.count %>)
-        </a>
-        <ul id="question_notifications_list" class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
-          <% current_user.question_notifications.reverse_each do |notification| %>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href=<%= notification_url notification, :type => :q %> data-method="delete">Some one asked...</a></li>
-          <% end %>
-        </ul>
-      </li>
+      <a class="brand" href="/">
+        <img src=<%= asset_path "logo-n4-justQ_icon_blue.png" %> width="40">
+      </a>      
+
+      <ul class="nav nav-pills navbar-nav pull-right">
+        <li href="#" class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <span class="glyphicon glyphicon-question-sign"></span>
+            <span id="question_notifications_counter" class="badge"></span>
+          </a>
+          <ul id="question_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel">
+            <li role="presentation" class="dropdown-header">Question Asked</li>
+            <li role="presentation" class="divider"></li>
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="#">See All</a>
+            </li>
+          </ul>
+        </li>
+
+        <li href="#" class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <span class="glyphicon glyphicon-info-sign"></span>
+            <span id="answer_notifications_counter" class="badge"></span>
+          </a>
+          <ul id="answer_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel">
+            <li role="presentation" class="dropdown-header">Anwser Recieved</li>
+            <li role="presentation" class="divider"></li>
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href="#">See All</a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+            <span class="glyphicon glyphicon-user"></span>
+          </a>
+          <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
+            <li role="presentation">
+              <a role="menuitem" tabindex="-1" href=<%= destroy_user_session_path %> data-method="delete">Sign out(<%= current_user.email %>)</a>
+            </li>
+          </ul>
+        </li>
+
+      </ul>
+
     </div>
-    <div class="dropdown" style="position:absolute; right:60px">
-      <li class="nav nav-pills" >
-        <a id="answer_notifications_counter" class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:#000000;bottom:20px">
-          Answers(<%= current_user.answer_notifications.count %>)
-        </a>
-        <ul id="answer_notifications_list" class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
-          <% current_user.answer_notifications.reverse_each do |notification| %>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href=<%= notification_url notification, :type => :a %> data-method="delete">Some one answered...</a></li>
-          <% end %>
-        </ul>
-      </li>
-    </div>
-    <div class="dropdown" style="position:absolute; right:20px">
-      <li class="nav nav-pills" >
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:#000000;bottom:20px">
-          <img src="assets/123.jpg"/>
-        </a>
-        <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dLabel">
-          <li role="presentation"><a role="menuitem" tabindex="-1" href=<%= destroy_user_session_path %> data-method="delete">Sign out(<%= current_user.email %>)</a></li>
-        </ul>
-      </li>
-    </div>
-  <% end %>
-</div>
+  </div> 
+</div> 
 
 <!-- p class="notice"><%= notice %></p -->
 <!-- p class="alert"><%= alert %></p -->
