--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,30 +1,62 @@
-<!-- p id="notice"><%= notice %></p -->
+<div class="container" style="padding:80px 0 60 0px">
+  <div class="row">
+    <div class="col col-md-5"></div>
+    <div class="col col-md-2">
+      <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
+    </div>
+    <div class="col col-md-5"></div>
+  </div>
+  <div class="row">
+    <div class="col col-md-3"></div>
+    <div class="col col-md-6">
+      <div class="panel panel-default">
+        <!-- Default panel contents -->
+        <div class="panel-body">
+          <p>
+            <strong><%= @question.content %></strong>
+          </p>
+        </div>
+        <!-- List group -->
+        <ul class="list-group">
+          <% if @question.answers.size > 0 %>
+            <% for answer in @question.answers %>
+              <li class="list-group-item">
+                <ul>
+                  <li><%= answer.content %></li>
+                </ul>
+              </li>
+            <% end %>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <div class="col col-md-3"></div>
+  </div>
 
-<p>
-  <b>Title:</b>
-  <%= @question.title %>
-</p>
+  <% if @question.user != current_user %>
+    <%= form_for [@question, Answer.new] do |f| %>
 
-<p>
-  <b>Content:</b>
-  <%= @question.content %>
-</p>
-
-<% if @question.answers.size > 0 %>
-  <h2>Answers</h2>
-  <% for answer in @question.answers %>
-    <p><%= answer.content %></p>
+      <div id="text" class="row">
+        <div class="col col-md-3"></div>
+        <div class="col col-md-6">
+          <!-- textarea class='normal' placeholder="Please type your answer..." style="width:100%"></textarea -->
+          <%= f.text_area :content, :cols => "", :rows => "", :class => "normal", :placeholder => "Please type your question...", :style => "width:100%"%>
+        </div>
+        <div class="col col-md-3"></div>
+      </div>
+      <div class="row" style="padding:5px 0 60 0px">
+        <div class="col col-md-3"></div>
+        <div class="col col-md-6">
+          <div class="text-center">
+            <div class="btn-group btn-group-lg">
+              <a href="#" class="btn ">Ignore</a>
+              <%= f.button "Answer",:id => "answer_button", :class => "btn btn-lg btn-primary"%>
+              <a href="#" class="btn ">follow</a>
+            </div>
+          </div>
+        </div>
+        <div class="col col-md-3"></div>
+      </div>
+    <% end %>
   <% end %>
-<% end %>
-
-<% if @question.user != current_user %>
-  <h2>New Answer</h2>
-
-  <%= form_for [@question, Answer.new] do |f| %>
-    <p><%= f.text_area :content, :rows => 10 %></p>
-    <p><%= f.submit %></p>
-  <% end %>
-<% end %>
-
-<%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
+</div>
