Refactor codes to add notifications. Use "jquery.autoresize".

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,7 +10,7 @@
     <div id="text" class="row">
       <div class="col col-md-3"></div>
       <div class="col col-md-6">
-        <%= f.text_area :content, :cols => "", :rows => "", :class => "normal", :placeholder => "Please type your question...", :style => "width:100%"%>
+        <%= f.text_area :content, :cols => "", :rows => "", :class => "autoresize", :placeholder => "Please type your question...", :style => "width:100%"%>
       </div>
       <div class="col col-md-3"></div>
     </div>
