--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag :defaults, "http://localhost:9292/faye.js" %>
   <%= csrf_meta_tags %>
+  <%= javascript_tag do %>
+    window.notification_objects = <%= notification_objects_json %>
+  <% end %>
   <link rel="shortcut icon" href=<%= asset_path "logo-n4-justQ_icon_blue.png" %>>
 </head>
 <body class="" style="background-color: #fff">
