--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -40,7 +40,7 @@
         <div class="col col-md-3"></div>
         <div class="col col-md-6">
           <!-- textarea class='normal' placeholder="Please type your answer..." style="width:100%"></textarea -->
-          <%= f.text_area :content, :cols => "", :rows => "", :class => "normal", :placeholder => "Please type your question...", :style => "width:100%"%>
+          <%= f.text_area :content, :cols => "", :rows => "", :class => "autoresize", :placeholder => "Please type your question...", :style => "width:100%"%>
         </div>
         <div class="col col-md-3"></div>
       </div>
