--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,28 +1,31 @@
-<%= form_for Question.new, :remote => true do |f| %>
-  <div class="container" style="padding:120px 0 60 0px">
-    <div class="row">
-      <div class="col col-md-4"></div>
-      <div class="col col-md-4">
-        <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
-      </div>
-      <div class="col col-md-4"></div>
+<% content_for :head do %>
+  <%= javascript_include_tag asset_path "main_index.js" %>
+<% end %>
+
+<div class="container" style="padding:120px 0px 60px 0px">
+  <div class="row">
+    <div class="col col-md-4"></div>
+    <div class="col col-md-4">
+      <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
     </div>
-    <div id="text" class="row">
-      <div class="col col-md-3"></div>
-      <div class="col col-md-6">
+    <div class="col col-md-4"></div>
+  </div>
+  <div id="text" class="row">
+    <div class="col col-md-3"></div>
+    <div class="col col-md-6">
+      <%= form_for Question.new do |f| %>
         <%= f.text_area :content, :cols => "", :rows => "", :class => "autoresize", :placeholder => "Please type your question...", :style => "width:100%"%>
-      </div>
-      <div class="col col-md-3"></div>
+      <% end %>
     </div>
+    <div class="col col-md-3"></div>
   </div>
   <div class="row" style="padding:10px 0 0 0px">
     <div class="col col-md-4"></div>
     <div class="col col-md-4">
       <div class="text-center">
-        <%= f.button "Ask",:id => "ask_button", :class => "btn btn-lg btn-primary"%>
+        <a id="ask_button" href="#" class="btn btn-lg btn-primary">Ask</a>
       </div>
     </div>
     <div class="col col-md-4"></div>               
   </div>
-
-<% end %>
+</div>
