--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,6 +79,16 @@
 <!-- p class="alert"><%= alert %></p -->
 
 <%= yield %>
-
+<div class="container">
+  <div class="row">
+    <div class="col col-md-4"></div>
+    <div class="col col-md-4">
+      <div id="alert_text" class="alert alert-warning">
+        <center><%= alert %></center>
+      </div>
+    </div>
+    <div class="col col-md-4"></div>
+  </div>
+</div>
 </body>
 </html>
