--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,8 +6,16 @@
   <div class="row">
     <div class="col col-md-5"></div>
     <div class="col col-md-2">
-      <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
+    
+      <a href="/">
+        <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
+      </a> 
+
     </div>
+
+
+
+
     <div class="col col-md-5"></div>
   </div>
   <div class="row">
