Change dropdown-menu background color to #FFFFFF on mobile device

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,6 +54,10 @@ textarea {
   padding-bottom: 10px;
 }
 
-.badge{
+.badge {
   background-color: #CE0000
+}
+
+.navbar-nav .open .dropdown-menu {
+  background-color: #FFFFFF
 }
