--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
               <span class="glyphicon glyphicon-question-sign"></span>
               <span id="question_notifications_counter" class="badge"></span>
             </a>
-            <ul id="question_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel" style="background-color: #fffffe">
+            <ul id="question_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel">
               <li role="presentation" class="dropdown-header">Question Asked</li>
               <li role="presentation" class="divider"></li>
               <li role="presentation">
@@ -46,7 +46,7 @@
               <span class="glyphicon glyphicon-info-sign"></span>
               <span id="answer_notifications_counter" class="badge"></span>
             </a>
-            <ul id="answer_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel" style="background-color: #fffffe">
+            <ul id="answer_notifications_list" class="dropdown-menu " role="menu" aria-labelledby="dLabel">
               <li role="presentation" class="dropdown-header">Anwser Recieved</li>
               <li role="presentation" class="divider"></li>
               <li role="presentation">
