Add "group" for demo

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,9 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
+  <div><%= f.label :group %><br />
+  <div><%= f.text_field :group %></div>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
