--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,9 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
+  <div><%= f.label :group %><br />
+  <div><%= f.text_field :group %></div>
+
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
