--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag :defaults, "http://" + TestMongoid::Application.config.faye_server_domain_name + ":" + TestMongoid::Application.config.faye_server_port.to_s + "/faye.js" %>
+  <%= javascript_include_tag "http://" + TestMongoid::Application.config.faye_server_domain_name + ":" + TestMongoid::Application.config.faye_server_port.to_s + "/faye.js" %>
   <%= yield :head %>
   <%= csrf_meta_tags %>
   <% if user_signed_in? %>
