--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,23 +5,17 @@
 <div class="container" style="padding:80px 0px 60px 0px">
   <div class="row">
     <div class="col col-md-5"></div>
-    <div class="col col-md-2">
-    
+    <div class="col col-md-2"> 
       <a href="/">
         <img src=<%= asset_path "logo-n4-3.png" %> class="img-responsive" alt="Responsive image">
       </a> 
-
     </div>
-
-
-
-
     <div class="col col-md-5"></div>
   </div>
   <div class="row">
     <div class="col col-md-3"></div>
     <div class="col col-md-6">
-      <div class="panel panel-default">
+      <div class="panel panel-default" style="word-wrap:break-word;">
         <!-- Default panel contents -->
         <div class="panel-body">
           <p>
